style.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  background: black;
  overflow: hidden;
  font-family: 'Press Start 2P', sans-serif;
}

canvas {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#game {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

#wordContainer {
  position: absolute;
  z-index: 2;
  text-align: center;
  font-size: 2em;
  color: white;
  pointer-events: auto;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#startScreen {
  position: absolute;
  z-index: 3;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  color: white;
}

#startScreen h1 {
  margin-bottom: 20px;
}

#startScreen button {
  margin: 5px;
  padding: 10px;
  font-size: 1em;
  background-color: #333;
  color: white;
  border: none;
  cursor: pointer;
  text-align: center;
}

.scoreButton {
  position: absolute;
  font-size: 3em;
  border: none;
  background: transparent;
  color: white;
  cursor: pointer;
}

#thumbsUp {
  top: 20px;
  left: 20px;
}

#thumbsDown {
  top: 20px;
  right: 20px;
}

.quitButton {
  position: absolute;
  top: 20px;
  font-size: 1em;
  padding: 5px;
  right: 50px;
  background-color: #444;
  color: white;
  border: none;
  cursor: pointer;
}

